--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "client-install":"cd client && npm install",
-    "client-build":"cd client and npm run build",
+    "client-build":"cd client && npm run build",
     "heroku-postbuild":"npm run client-install && npm run client-build"
   },
   "author": "",
